--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.7",
+    "graphql": "^15.4.0",
     "next": "10.0.1",
+    "node-sass": "4.14.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.8",
+    "@types/react": "^16.9.56",
+    "typescript": "^4.0.5"
   }
 }
