--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "10.0.1",
     "node-sass": "4.14.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.8",
