--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-sass": "4.14.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-html-parser": "^2.0.2"
+    "react-html-parser": "^2.0.2",
+    "react-player": "^2.7.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.8",
