--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-html-parser": "^2.0.2",
-    "react-player": "^2.7.0"
+    "react-player": "^2.7.0",
+    "swiper": "^6.4.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.8",
     "@types/react": "^16.9.56",
+    "next-images": "^1.6.2",
     "typescript": "^4.0.5"
   }
 }
