--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.7",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "graphql": "^15.4.0",
     "next": "10.0.1",
     "node-sass": "4.14.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-html-parser": "^2.0.2",
     "react-player": "^2.7.0",
     "swiper": "^6.4.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.8",
-    "@types/react": "^16.9.56",
+    "@types/react": "^17.0.0",
     "next-images": "^1.6.2",
     "typescript": "^4.0.5"
   }
