--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "graphql": "^15.4.0",
-    "next": "10.0.1",
+    "next": "^12.0.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
