--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "axios": "^0.21.1",
     "graphql": "^15.4.0",
     "next": "^12.0.1",
-    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-html-parser": "^2.0.2",
     "react-player": "^2.7.0",
+    "sass": "^1.55.0",
     "swiper": "^6.4.1"
   },
   "devDependencies": {
